# kmoelite

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.en.md  README.md  ROADMAP.md  SECURITY.md  TASK_PROGRESS.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: desktop-ci.yml
apps/kmoe-app/: index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/kmoe-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/kmoe-app/src-tauri/capabilities/: main.json
apps/kmoe-app/src-tauri/examples/: verify_real_download_once.rs
apps/kmoe-app/src-tauri/icons/: icon.icns
apps/kmoe-app/src-tauri/src/: commands.rs  commands_open_spec.rs  commands_snapshot_tests.rs  db.rs  db_rows.rs  db_tests.rs  downloader.rs  fs_utils.rs  http.rs  lib.rs  main.rs  models.rs  queue.rs  reader.rs  web_adapter.rs
apps/kmoe-appletv/: README.md  project.yml
docs/: README.md
docs/architecture/: README.md
docs/development/: README.md
scripts/: check-ios-assets.mjs  check-platform-readiness.mjs  create-release-manifest.mjs  package-macos-dmg.sh  setup-ios-local-tools.sh  smoke-android-device.sh  smoke-android-live-reader.mjs  smoke-android-live-reader.sh  smoke-appletv-simulator.sh  smoke-ios-simulator.sh  smoke-macos-app.sh  sync-ios-assets.mjs  test-appletv.sh  verify-real-site-smoke.mjs  verify-real-source-zip-reader.sh  verify-release-readiness.sh
(+169 files in other folders)
